# DonFiapo

./: .env.example  .gitignore  AUDITORIA_SEGURANCA.md  LACUNAS_IMPLEMENTACAO.md  PLANEJAMENTO_TDD_DONFIAP.md  PLANO_DE_ACAO.md  README.md  WHITEPAPER.md  docker-compose.yml  null
Requisitos/: requisitos.md  site.md
deploy/: README.md  cleanup.sh  deploy.sh  docker-compose.yml  setup.sh
docs/: CHECKLIST_PRODUCAO.md  DEPARA_EXECUCAO.md  FUTURE_IMPROVEMENTS.md  INVESTOR_PITCH.md  MIGRACAO_SOLANA_V2.md  NFT_EVOLUTION_SYSTEM.md  SIMULACOES_INVESTIMENTO.md  WHITEPAPER_RESUMIDO.md
don-fiapo-admin/: .env.example  ADMIN_ANALYSIS.md  Dockerfile  dev.db  jest.config.js  next.config.ts  package.json  prisma.config.ts
don-fiapo-web/: ANTI_FRAUD_SETUP.md  Dockerfile  SECURITY_AUDIT.md  calc_selectors.js  check-contract.js  check-svgs.js  db-test-web.ts  fix-bingx.js  fix-bingx2.js  fix-bingx3.js  fix-bingx4.js  fix-bingx5.js  fix-svg-colors-v2.js  fix-svg-colors-v3.js  (+4 more)
don_fiapo/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README_NFT_IMPLEMENTATION.md  build_all.sh  debug_cross_contract.py  reproduce_gov_failure.py  rust-toolchain.toml
don_fiapo/archive/: lunex_metadata.json
don_fiapo/archive/docs/: AUDITORIA_SEGURANCA_CONFORMIDADE.md  CONFIGURACAO_CARTEIRAS_LUNES.md  CROSS-CONTRACT-ANALYSIS.md  CROSS-CONTRACTS.md  DISTRIBUICAO_TAXAS_GOVERNANCA.md  DOCUMENTACAO_SISTEMA_QUEIMA.md  GAP_ANALYSIS_JAN_2026.md  IMPLEMENTACAO_PROXIMOS_PASSOS.md  IMPLEMENTACAO_SISTEMA_RANKING.md  IMPLEMENTACAO_SISTEMA_REMUNERACAO.md  LUNEX_COMPATIBILITY.md  REGRAS_ESPECIAIS_GOVERNANCA.md  REGRAS_GOVERNANCA_COMPLETAS.md  SECURITY_AUDIT_REPORT.md  SIMULACAO_100K_DETALHADA.md  SISTEMA_REMUNERACAO_GOVERNANCA.md  STATUS_IMPLEMENTACAO_FINAL.md  STATUS_PROJETO.md  VERIFICACAO_REGRAS_NEGOCIO.md
don_fiapo/archive/monolith_legacy/examples/: run_simulation.rs
don_fiapo/archive/monolith_legacy/fuzz/: Cargo.toml
don_fiapo/archive/monolith_legacy/fuzz/fuzz_targets/: fuzz_fee_calculation.rs
don_fiapo/archive/monolith_legacy/scripts/: deploy.sh  upload_to_ipfs.sh
don_fiapo/archive/monolith_legacy/src/: apy.rs  burn.rs  ico.rs  integration.rs  lib.rs  marketplace.rs  nft_rarity.rs  staking.rs  tests_solana_integration.rs  upgrade.rs
don_fiapo/archive/monolith_legacy/tests/: nft_integration_tests.rs  nft_tests.rs  security_tests.rs
don_fiapo/archive/monolith_legacy/tests/unit/: test_ico.rs
don_fiapo/archive/src_backup_20251228_231308/: access_control.rs  airdrop.rs  ico.rs  multisig.rs  nft_evolution.rs  rewards.rs  security.rs  solana.rs  solana_bridge.rs  staking.rs
don_fiapo/archive/src_backup_20251228_231308/airdrop/: hooks.rs
don_fiapo/archive/src_backup_20251228_231308/fees/: calculation.rs  mod.rs
don_fiapo/contracts/affiliate/: Cargo.toml
don_fiapo/contracts/affiliate/src/: lib.rs
don_fiapo/contracts/airdrop/: Cargo.toml
don_fiapo/contracts/airdrop/src/: lib.rs
don_fiapo/contracts/bridge/: Cargo.toml
don_fiapo/contracts/bridge/src/: lib.rs
don_fiapo/contracts/core/: Cargo.toml
don_fiapo/contracts/core/src/: lib.rs
don_fiapo/contracts/governance/: Cargo.toml
don_fiapo/contracts/governance/src/: lib.rs
don_fiapo/contracts/ico/: Cargo.toml
don_fiapo/contracts/ico/src/: lib.rs
don_fiapo/contracts/lottery/: Cargo.toml
don_fiapo/contracts/lottery/src/: lib.rs
don_fiapo/contracts/marketplace/: Cargo.toml
don_fiapo/contracts/marketplace/src/: lib.rs
don_fiapo/contracts/nft_collections/: Cargo.toml
don_fiapo/contracts/nft_collections/src/: lib.rs
don_fiapo/contracts/noble_affiliate/: Cargo.toml
don_fiapo/contracts/noble_affiliate/src/: lib.rs
don_fiapo/contracts/oracle_multisig/: Cargo.toml
don_fiapo/contracts/oracle_multisig/src/: lib.rs
don_fiapo/contracts/rewards/: Cargo.toml
don_fiapo/contracts/rewards/src/: lib.rs
don_fiapo/contracts/security/: Cargo.toml
don_fiapo/contracts/security/src/: lib.rs
don_fiapo/contracts/simple_target/: Cargo.toml  lib.rs
don_fiapo/contracts/spin_game/: Cargo.toml  lib.rs
don_fiapo/contracts/staking/: Cargo.toml
don_fiapo/contracts/staking/src/: lib.rs
don_fiapo/contracts/test_cross/: Cargo.toml
don_fiapo/contracts/test_cross/src/: lib.rs
don_fiapo/contracts/test_pure/: Cargo.toml
don_fiapo/contracts/test_pure/src/: lib.rs
don_fiapo/contracts/timelock/: Cargo.toml
don_fiapo/contracts/timelock/src/: lib.rs
don_fiapo/contracts/traits/: Cargo.toml
don_fiapo/contracts/traits/src/: lib.rs
don_fiapo/contracts/upgrade/: Cargo.toml
don_fiapo/contracts/upgrade/src/: lib.rs
don_fiapo/docker/: Dockerfile.builder  build_contracts.sh  docker-compose.builder.yml
don_fiapo/docs/: AUDIT-REPORT.md  AUDIT_REPORT.md  CROSS-CONTRACT-MAP.md  DEPLOY_LUNES_TESTNET.md  DISTRIBUICAO_TAXAS_GOVERNANCA.md  HIGIENIZACAO_PROJETO.md  IMPLEMENTACOES_DOCUMENTADAS.md  LACUNAS_IMPLEMENTACAO.md  LUNEX_COMPATIBILITY.md  MELHORIAS_SEGURANCA_IMPLEMENTADAS.md  PLANO_APY_DINAMICO.md  PLANO_IMPLEMENTACAO_APY_DINAMICO.md  PLANO_IMPLEMENTACAO_LACUNA_1.md  REGRAS_PAGAMENTO_STAKING_GOVERNANCA.md  RELATORIO_SIMULACAO_100K_RESULTADOS.md  RESUMO_SIMULACAO_100K.md  SECURITY.md  SIMULACAO_100K_DETALHADA.md  SIMULACAO_100K_USUARIOS.md  SISTEMA_RANKING_REWARDS.md  TESTNET-PLAN.md  VERIFICACAO_REGRAS_NEGOCIO.md  tasks.md
don_fiapo/fuzz/fuzz_targets/: fuzz_apy_calculation.rs  fuzz_burn_validation.rs  fuzz_oracle_multisig.rs
don_fiapo/logics/: Cargo.toml  lib.rs
don_fiapo/logics/traits/: affiliate.rs  mod.rs  oracle.rs  psp22.rs  rewards.rs  staking.rs
don_fiapo/src/: airdrop.rs  governance.rs  ico.rs  integration.rs  lib.rs  lottery.rs  nft_evolution.rs  nft_rarity.rs  oracle_multisig.rs  ranking_system.rs  simulation_100k.rs  timelock.rs
don_fiapo/src/fees/: calculation.rs
don_fiapo/src_backup_20251228_231308/: affiliate.rs  burn.rs  dashboard.rs  gamification.rs  governance.rs  integration_manager.rs  lib.rs  ranking_system.rs
don_fiapo/src_backup_20251228_231308/fees/: distribution.rs
don_fiapo/tests/: business_rules_tests.rs  e2e_tests.rs  nft_tests.rs  security_tests.rs  tokenomics_tests.rs
(+419 files in other folders)
