[workspace]
resolver = "2"
members = [
    "contracts/traits",
    "contracts/core",
    "contracts/ico",
    "contracts/staking",
    "contracts/governance",
    "contracts/lottery",
    "contracts/airdrop",
    "contracts/rewards",
    "contracts/marketplace",
    "contracts/affiliate",
    "contracts/security",
    "contracts/timelock",
    "contracts/upgrade",
    "contracts/oracle_multisig",
    "logics",
    "contracts/test_cross",
    "contracts/simple_target",
    "contracts/test_pure",
    "contracts/noble_affiliate",
    "contracts/nft_collections",
]

[workspace.package]
version = "1.0.0"
authors = ["Don Fiapo Team"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# ink! 4.2.1 - Compatible with Lunes node (matching Lunex)
ink = { version = "~4.2.1", default-features = false }

# SCALE Codec for serialization/deserialization
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
overflow-checks = true