[package]
name = "fiapo-logics"
version = "1.0.0"
authors = ["Don Fiapo Team"]
edition = "2021"
license = "MIT"
description = "Shared traits and logics for Don Fiapo ecosystem cross-contract calls"

[dependencies]
ink = { version = "~4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
fiapo-traits = { path = "../contracts/traits", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "fiapo_logics"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "fiapo-traits/std",
]
