[package]
name = "fiapo-governance"
version = "1.0.0"
authors = ["Don Fiapo Team"]
edition = "2021"
license = "MIT"
description = "Governance contract for Don Fiapo ecosystem"

[dependencies]
ink.workspace = true
scale.workspace = true
scale-info = { workspace = true, optional = true }
fiapo-traits = { path = "../traits", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "fiapo-traits/std",
]
ink-as-dependency = []
