[package]
name = "spin_game"
version = "1.0.0"
authors = ["Don Fiapo Team"]
edition = "2021"
license = "MIT"
description = "Spin the Wheel game for Don Fiapo ecosystem"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
fiapo-traits = { path = "../traits", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
