[package]
name = "test_cross"
version = "0.1.0"
authors = ["Don Fiapo"]
edition = "2021"

[dependencies]
ink = { version = "~4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
fiapo-logics = { path = "../../logics", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "fiapo-logics/std",
]
ink-as-dependency = []
