[package]
name = "fiapo-traits"
version = "1.0.0"
authors = ["Don Fiapo Team"]
edition = "2021"
license = "MIT"
description = "Shared trait definitions for Don Fiapo ecosystem contracts"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
